[package]
name = "otel-instrument"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
syn = { version = "2.0", default-features = false, features = [
    "full",
    "parsing",
    "printing",
    "visit-mut",
    "clone-impls",
    "extra-traits",
    "proc-macro",
] }
quote = "1.0.20"

[dev-dependencies]
async-trait = "0.1.67"
trybuild = "1.0.64"
rustversion = "1.0.9"
